--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -40,7 +40,7 @@
               <%= f.text_field :content, id:"comment_content" %>
             </div>
             <div class="actions">
-              <%= f.submit "送信する", "#{@prototype.id}", class: :form__btn  %>
+              <%= f.submit "送信する", class: :form__btn  %>
             </div>
           <% end %>
         <%# // ログインしているユーザーには上記を表示する %>
