--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -5,7 +5,7 @@
         <%= @prototype.title %>
       </p>
       <%= link_to "by #{@prototype.user.name}", "/users/#{@prototype.user_id}", class: :prototype__user %>
-      <% if user_signed_in? && current_user.id == @prototype.user_id%>
+      <% if user_signed_in? && current_user.id == @prototype.user_id %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
         <div class="prototype__manage">
           <%= link_to "編集する", edit_prototype_path(@prototype.id), class: :prototype__btn %>
@@ -47,14 +47,14 @@
         <% end %>
         <ul class="comments_lists">
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
-              <% @comments.each do |comment| %>
-            <li class="comments_list">
-              <p>
-              <%= comment.content %>
-              <%= link_to "( #{@prototype.user.name})", "/users/#{@prototype.user_id}", class: :comment_user %>
-              </p>
-              <% end %>
-            </li>
+        <% @comments.each do |comment| %>
+          <li class="comments_list">
+            <p>
+            <%= comment.content %>
+            <%= link_to "( #{comment.user.name})", "/users/#{@prototype.user_id}", class: :comment_user %>
+            </p>
+          </li>
+        <% end %>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
         </ul>
       </div>
